update-manager (1:0.133.2) UNRELEASED; urgency=low

  * DistUpgrade/DistUpgradeViewNonInteractive.py:
    - fix regression in conffile prompt handling (LP: #538206)
    - add default to the "NonInteractive", "DebugBrokenScripts" 
      config option

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Mar 2010 15:45:50 +0100

update-manager (1:0.133.1) lucid; urgency=low

  [ Barry Warsaw ]
  * Fix obvious NameError by adding a missing import. (LP: #537250)

  [ David Planella ]
  * Made some strings translatable and extractable as a fix for 
    LP: #537277
 
  [ Michael Vogt ]
  * po/*.po:
    - updated from rosetta
  * DistUpgrade/DistUpgradeApport.py:
    - do not try to add directories under /var/log/dist-upgrade
      to a apport report (LP: #369951)

  [ Shlomi Loubaton ]
  * Set text direction for update treeview to be always LTR regardless
    of current language settings (LP: #316171)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Mar 2010 23:43:27 +0100

update-manager (1:0.133) lucid; urgency=low

  [ Michael Vogt ]
  * UpdateManager/Core/MetaRelease.py:
    - allow upgrade from unsupported version to unsupported version
  * DistUpgrade/removal_blacklist.cfg:
    - allow removal of update-manager-kde
  * check-new-release-gtk:
    - fixes in the gtk release upgrade check
  * DistUpgrade/xorg_fix_proprietary.py:
    - if /etc/X11/XF86Config-4 is found on upgrade, rename it to
      "XF86Config-4.obsolete"
    - write log to "/var/log/dist-upgrade/xorg_fixup.log"
  * do-release-upgrade, check-new-release:
    - implemented "check-releae-upgrade" as symlink to do-release-upgrade
      and automatically run with "--check-dist-upgrade-only" when called
      as c-r-u
    - add --quiet option to do-release-upgrade
  * debian/update-manager-core.links:
    - install /usr/lib/update-manager/check-new-release as symlink to
      do-release-upgrade -c

  [ Wesley Schwengle ]
  * Check for release upgrade is now also possible with do-release-upgrade