@@ -4,8 +4,11 @@ update-manager (1:0.133.2) UNRELEASED; urgency=low
     - fix regression in conffile prompt handling (LP: #538206)
     - add default to the "NonInteractive", "DebugBrokenScripts" 
       config option
+  * DistUpgrade/DistUpgradeController.py:
+    - honor "DEBIAN_FRONTEND=noninteractive" in recovery mode as
+      well (LP: #538206)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Mar 2010 15:45:50 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Mar 2010 15:56:43 +0100
 
 update-manager (1:0.133.1) lucid; urgency=low
 
